--- a/docs/Contribute/it.po
+++ b/docs/Contribute/it.po
@@ -1645,8 +1645,8 @@ msgstr "## Struttura del progetto\n"
 
 # This content is from "Contribution-Guide.md", line 105
 msgctxt "chunk_9004E6A3"
-msgid "- **config folder**: Configuration system.\n- **translator folder**: Translator-related implementations.\n- **gui.py**: Provides the GUI interface.\n- **const.py**: Some constants.\n- **main.py**: Provides the command-line tool.\n- **high_level.py**: High-level interfaces based on BabelDOC.\n- **http_api.py**: Provides HTTP API (not started).\n"
-msgstr "- **config folder**: Sistema di configurazione.\n- **translator folder**: Implementazioni relative al traduttore.\n- **gui.py**: Fornisce l'interfaccia GUI.\n- **const.py**: Alcune costanti.\n- **main.py**: Fornisce lo strumento da riga di comando.\n- **high_level.py**: Interfacce di alto livello basate su BabelDOC.\n- **http_api.py**: Fornisce API HTTP (non avviato).\n"
+msgid "- **config folder**: Configuration system.\n- **translator folder**: Translator-related implementations.\n- **gui.py**: Provides the GUI interface.\n- **const.py**: Some constants.\n- **main.py**: Provides the command-line tool.\n- **high_level.py**: High-level interfaces based on BabelDOC.\n- **api/app.py**: Provides HTTP API (not started).\n"
+msgstr "- **config folder**: Sistema di configurazione.\n- **translator folder**: Implementazioni relative al traduttore.\n- **gui.py**: Fornisce l'interfaccia GUI.\n- **const.py**: Alcune costanti.\n- **main.py**: Fornisce lo strumento da riga di comando.\n- **high_level.py**: Interfacce di alto livello basate su BabelDOC.\n- **api/app.py**: Fornisce API HTTP (non avviato).\n"
 
 # This content is from "Contribution-Guide.md", line 113
 msgctxt "chunk_0C087ADF"
