--- a/docs/Contribute/ja.po
+++ b/docs/Contribute/ja.po
@@ -1715,8 +1715,8 @@ msgstr "## プロジェクト構造\n"
 
 # This content is from "Contribution-Guide.md", line 105
 msgctxt "chunk_9004E6A3"
-msgid "- **config folder**: Configuration system.\n- **translator folder**: Translator-related implementations.\n- **gui.py**: Provides the GUI interface.\n- **const.py**: Some constants.\n- **main.py**: Provides the command-line tool.\n- **high_level.py**: High-level interfaces based on BabelDOC.\n- **http_api.py**: Provides HTTP API (not started).\n"
-msgstr "- **config フォルダ**：設定システム。\n- **translator フォルダ**：翻訳関連の実装。\n- **gui.py**：GUI インターフェースを提供。\n- **const.py**：いくつかの定数。\n- **main.py**：コマンドラインツールを提供。\n- **high_level.py**：BabelDOC ベースの高レベルインターフェース。\n- **http_api.py**：HTTP API を提供（未開始）。\n"
+msgid "- **config folder**: Configuration system.\n- **translator folder**: Translator-related implementations.\n- **gui.py**: Provides the GUI interface.\n- **const.py**: Some constants.\n- **main.py**: Provides the command-line tool.\n- **high_level.py**: High-level interfaces based on BabelDOC.\n- **api/app.py**: Provides HTTP API (not started).\n"
+msgstr "- **config フォルダ**：設定システム。\n- **translator フォルダ**：翻訳関連の実装。\n- **gui.py**：GUI インターフェースを提供。\n- **const.py**：いくつかの定数。\n- **main.py**：コマンドラインツールを提供。\n- **high_level.py**：BabelDOC ベースの高レベルインターフェース。\n- **api/app.py**：HTTP API を提供（未開始）。\n"
 
 # This content is from "Contribution-Guide.md", line 113
 msgctxt "chunk_0C087ADF"
