--- a/docs/Contribute/zh.po
+++ b/docs/Contribute/zh.po
@@ -1260,8 +1260,8 @@ msgstr "## 项目结构\n"
 
 # This content is from "Contribution-Guide.md", line 105
 msgctxt "chunk_9004E6A3"
-msgid "- **config folder**: Configuration system.\n- **translator folder**: Translator-related implementations.\n- **gui.py**: Provides the GUI interface.\n- **const.py**: Some constants.\n- **main.py**: Provides the command-line tool.\n- **high_level.py**: High-level interfaces based on BabelDOC.\n- **http_api.py**: Provides HTTP API (not started).\n"
-msgstr "- **config 文件夹**：配置系统。\n- **translator 文件夹**：翻译器相关实现。\n- **gui.py**：提供 GUI 界面。\n- **const.py**：一些常量。\n- **main.py**：提供命令行工具。\n- **high_level.py**：基于 BabelDOC 的高级接口。\n- **http_api.py**：提供 HTTP API（未启动）。\n"
+msgid "- **config folder**: Configuration system.\n- **translator folder**: Translator-related implementations.\n- **gui.py**: Provides the GUI interface.\n- **const.py**: Some constants.\n- **main.py**: Provides the command-line tool.\n- **high_level.py**: High-level interfaces based on BabelDOC.\n- **api/app.py**: Provides HTTP API (not started).\n"
+msgstr "- **config 文件夹**：配置系统。\n- **translator 文件夹**：翻译器相关实现。\n- **gui.py**：提供 GUI 界面。\n- **const.py**：一些常量。\n- **main.py**：提供命令行工具。\n- **high_level.py**：基于 BabelDOC 的高级接口。\n- **api/app.py**：提供 HTTP API（未启动）。\n"
 
 # This content is from "Contribution-Guide.md", line 113
 msgctxt "chunk_0C087ADF"
