--- a/docs/Contribute/zh_TW.po
+++ b/docs/Contribute/zh_TW.po
@@ -1685,8 +1685,8 @@ msgstr "## 專案結構\n"
 
 # This content is from "Contribution-Guide.md", line 105
 msgctxt "chunk_9004E6A3"
-msgid "- **config folder**: Configuration system.\n- **translator folder**: Translator-related implementations.\n- **gui.py**: Provides the GUI interface.\n- **const.py**: Some constants.\n- **main.py**: Provides the command-line tool.\n- **high_level.py**: High-level interfaces based on BabelDOC.\n- **http_api.py**: Provides HTTP API (not started).\n"
-msgstr "- **config 資料夾**：配置系統。\n- **translator 資料夾**：與翻譯器相關的實現。\n- **gui.py**：提供 GUI 介面。\n- **const.py**：一些常數。\n- **main.py**：提供命令行工具。\n- **high_level.py**：基於 BabelDOC 的高階介面。\n- **http_api.py**：提供 HTTP API（尚未啟動）。\n"
+msgid "- **config folder**: Configuration system.\n- **translator folder**: Translator-related implementations.\n- **gui.py**: Provides the GUI interface.\n- **const.py**: Some constants.\n- **main.py**: Provides the command-line tool.\n- **high_level.py**: High-level interfaces based on BabelDOC.\n- **api/app.py**: Provides HTTP API (not started).\n"
+msgstr "- **config 資料夾**：配置系統。\n- **translator 資料夾**：與翻譯器相關的實現。\n- **gui.py**：提供 GUI 介面。\n- **const.py**：一些常數。\n- **main.py**：提供命令行工具。\n- **high_level.py**：基於 BabelDOC 的高階介面。\n- **api/app.py**：提供 HTTP API（尚未啟動）。\n"
 
 # This content is from "Contribution-Guide.md", line 113
 msgctxt "chunk_0C087ADF"
